# da_py

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: archive_audit.md  examples.md  index.md  model_noise.md  notation.md  notebook_spec.md  rng_policy.md  roadmap.md
docs/algorithms/: enkfn.md  model_noise.md
docs/contributing/: examples_roadmap.md  notebook_spec.md
docs/guides/: examples.md
docs/reference/: notation.md
examples/: example_registry.json  l63_etkf.ipynb  l63_etpf.ipynb  l63_lypunov.ipynb  l63_pf.ipynb  l63_po.ipynb  l96.ipynb  l96_etkf.ipynb  l96_etkf.py  l96_letkf.ipynb  l96_partial_3dvar.ipynb  l96_pf.ipynb  nse2d_etkf.py  nse2d_etkf_large_ensemble_partial_obs.py  nse2d_kelly_etkf.py  nse2d_reference_configs.py  nse2d_torus_forecast.py  qmc.ipynb  qmc_convergence.ipynb  xl96_pf.ipynb  xnmc.ipynb  xqmc_convergence.ipynb
examples/archive/: dim_ens.ipynb  l63_lypunov.ipynb  l63_pf.ipynb  l63_po.ipynb  l96.ipynb  l96_partial_3dvar.ipynb  l96_pf.ipynb  nse2d_etkf.py  nse2d_partial_obs_enkf.py  nse2d_synchronization.py
examples/notebooks/: l63_3dvar_exkf.ipynb  l63_etkf.ipynb  l63_etpf.ipynb  l63_pf.ipynb  l96_enkfn.ipynb  l96_etkf.ipynb  l96_letkf.ipynb  nse2d_etkf.ipynb
examples/output/: l96_enkfn_series.csv  l96_enkfn_tuning.csv
examples/scripts/: _common.py  l63_3dvar_exkf.py  l63_etkf.py  l63_etpf.py  l63_pf.py  l96_enkfn.py  l96_enkfn_tuning.py  l96_etkf.py  l96_letkf.py  nse2d_etkf.py
notebooks/: l96_letkf.ipynb  lorenz96.ipynb  nmc.ipynb  qmc.ipynb  qmc_convergence.ipynb
src/: __init__.py  ensemblefilter.py  etkf.py  etpf.py  henon.py  l63.py  l96.py  letkf.py  optimize.py  params.py  pf.py  po.py  scheme.py  stats.py  var3d.py  visualize.py
src/da/: __init__.py  dimension.py  enkfn.py  etkf.py  etkfn2011.py  etpf.py  exkf.py  l96.py  letkf.py  localization.py  loss.py  noise.py  nse2d.py  optimize.py  pf.py  po.py  visualize.py
src/filter/: basefilter.py  (+3 more)
tests/: test_enkf_analysis.py  test_enkfn.py  test_etkfn2011.py  test_examples_registry.py  test_inflation_semantics.py  test_l96_enkfn.py  test_loss.py  test_models.py  test_noise.py  test_nse2d.py  test_nse2d_kelly.py  test_nse2d_projection.py  test_pf_weights.py  test_reference_configs.py  test_scheme.py  test_version_metadata.py  test_viz.py
(+10 files in other folders)
