[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "da_py"
version = "0.6"
description = "Data assimilation tools for Python"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kota Takeda" }]
dependencies = ["numpy>=1.19", "scipy>=1.1"]

[project.optional-dependencies]
etpf = ["POT>=0.9.1"]
examples = [
    "ipykernel",
    "jupyter",
    "matplotlib",
    "pandas",
    "plotly",
    "seaborn",
    "tqdm",
]
dev = [
    "ipykernel",
    "jupyter",
    "jupyter_contrib_nbextensions",
    "matplotlib",
    "pandas",
    "plotly",
    "pytest",
    "ruff",
    "seaborn",
    "tqdm",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["da", "da.viz", "da.viz._research_figures"]

[tool.setuptools.package-data]
"da.viz._research_figures" = ["styles/*.mplstyle"]

[tool.black]
line-length = 88
